Final Product.  Not perfect, but better than my other part

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,9 @@
 </div>
 </body>
 <style type="text/css">
+body{
+	background-image: url(./assets/images/green_cup.png);
+}
 	#foot {
     position: fixed;
     left: 0;
