--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 	</div>
 </body>
 <style type="text/css">
+body{
+	background-image: url(./assets/images/green_cup.png);
+}
 	.connect{
 		background-color: #ffffff;
   		
