--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,9 @@
 	  	</div>
 </body>
 <style type="text/css">
+	body{
+		background-image: url("./assets/images/green_cup.png");
+	}
 	#foot {
     position: fixed;
     left: 0;
